# beam-postgres-connector

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml  upload_pypi.yaml
examples/: read_records.py  read_records_query_splitter.py  write_records.py
src/beam_postgres/: client.py  errors.py  io.py  source.py  splitters.py  utils.py
tests/: conftest.py  docker-compose.yml  test_read_records.py  test_write_records.py
tests/db_scripts/postgres/: create_test_table.sql
